Build Windows, Linux install image